# Interpreting-Context-Look-ups

./: .gitignore  pyproject.toml
experiment_data/: text_dict_train.pkl
notebooks/: 1_find_neurons.ipynb  2_find_max_activating.ipynb  3_trim_max_activating.ipynb  4_head_attribution.ipynb  4_new_head_attribution.ipynb  5_results_dot_product_evaluation.ipynb  6_head_explanation.ipynb  7_explanation_eval.ipynb  8_results.ipynb  9_head_ablation.ipynb  9_neuron_ablation.ipynb  9_next_token_check.ipynb
scripts/: api_request_parallel_processor.py
src/: datahandlers.py  neuron_heads.py  neuron_texts.py
