[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Interpretability_research"
version = "0.1.0"
dependencies = [
    "pandas==3.0.2",
    "numpy==2.4.4",
    "matplotlib==3.10.9",
    "scikit-learn==1.8.0", 
    "transformer_lens==3.1.0",
    "attrs==26.1.0",
    "jax==0.10.0",
    "jaxlib==0.10.0",
    "openai==2.36.0",
    "tiktoken==0.12.0"

]
description = "Mechanistic Interpretability tools"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "notebooks*", "scripts*", "experiment_data*", "*"]